Fix table wrapping and scrolling

--- a/src/scss/_table.scss
+++ b/src/scss/_table.scss
@@ -1,5 +1,5 @@
 .o-techdocs-table-wrapper {
-  overflow: scroll;
+  overflow: auto;
 }
 
 .o-techdocs-content table {
